compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_redundant_tuple_with_catch_all_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(code, 4, REMOVE_REDUNDANT_TUPLES)"
---
pub fn main() {
  case 1, 2 {
    1, 2 -> 0
    _, _ -> 1
  }
}
