compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_unused_simple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\n// test\nimport // comment\n  list as lispy\nimport result\nimport option\n\npub fn main() {\n  result.is_ok\n}\n"
---
// test
import result

pub fn main() {
  result.is_ok
}
