compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_unused_start_of_file.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "import option\nimport result\n\npub fn main() {\n  result.is_ok\n}\n"
---
import result

pub fn main() {
  result.is_ok
}
