compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__rename_invalid_const.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action(code, 0)"
---
const my_invalid_constant = 42
